[gd_scene load_steps=13 format=2]

[ext_resource path="res://PixelFJVerdana12pt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/sun.png" type="Texture" id=2]
[ext_resource path="res://sprites/mountains.png" type="Texture" id=3]
[ext_resource path="res://HowTo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://scenes/Credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/Watertower.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/ChargingStation.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/SmallGrave.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/LargeGrave.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = -83.0
margin_right = 246.0
margin_bottom = 147.0
color = Color( 0.678431, 0.470588, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" parent="ColorRect" instance=ExtResource( 4 )]
position = Vector2( 1.43875, -148.881 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 116.0
margin_right = 246.0
margin_bottom = 197.0
color = Color( 0.784314, 0.764706, 0.745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mountains" type="Sprite" parent="ColorRect2"]
position = Vector2( 122.207, -23.9584 )
texture = ExtResource( 3 )

[node name="sun" type="Sprite" parent="."]
position = Vector2( 118.338, 41.616 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Node2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 2.21777, 196.741 )

[node name="Watertower" parent="Node2D" instance=ExtResource( 7 )]
position = Vector2( 189.529, 134.655 )

[node name="KinematicBody2D" parent="Node2D" instance=ExtResource( 9 )]
position = Vector2( 34.1315, 130.583 )

[node name="KinematicBody2D2" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 56.6104, 131.072 )

[node name="KinematicBody2D3" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 106.129, 132.701 )

[node name="KinematicBody2D4" parent="Node2D" instance=ExtResource( 9 )]
position = Vector2( 81.044, 129.769 )

[node name="KinematicBody2D5" parent="Node2D" instance=ExtResource( 8 )]
position = Vector2( 177.312, 59.7257 )

[node name="Label" type="Label" parent="."]
margin_left = -0.0568237
margin_top = 23.2385
margin_right = 244.943
margin_bottom = 59.2385
custom_fonts/font = SubResource( 1 )
text = "Heat Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Label"]
anchor_top = 2.11928e-07
anchor_bottom = 2.11928e-07
margin_left = 10.523
margin_top = 97.0
margin_right = 99.523
margin_bottom = 139.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "Play!"

[node name="Button2" type="Button" parent="Label"]
margin_left = 64.484
margin_top = 97.0
margin_right = 258.484
margin_bottom = 139.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "How to play?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Label"]
anchor_top = 0.00440915
anchor_bottom = 0.00440937
margin_left = 171.0
margin_top = 97.0
margin_right = 304.0
margin_bottom = 139.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Label"]
margin_left = 173.635
margin_top = -251.405
margin_right = 367.635
margin_bottom = -209.405
rect_scale = Vector2( 0.35, 0.35 )
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Label"]
margin_left = 172.337
margin_top = 180.181
margin_right = 366.337
margin_bottom = 222.181
rect_scale = Vector2( 0.35, 0.35 )
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 121.581, 73.5981 )

[connection signal="button_up" from="Label/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Label/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="Label/Button4" to="." method="_on_Button4_button_up"]
[connection signal="button_up" from="Label/Button3" to="." method="_on_Button3_button_up"]
[connection signal="button_up" from="Label/Button5" to="." method="_on_Button3_button_up"]
